--- a/content/第三次討論.html
+++ b/content/第三次討論.html
@@ -134,10 +134,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">討論 << <a href='討論.html'>Previous</a> <a href='第二次討論.html'>Next</a> >> 第二次討論<br /><h1>第一次討論</h1>
-<p>日期3/25</p>
-<p><img alt="" height="810" src="./../images/4人分組討論1.png" width="592"/><img alt="" height="854" src="./../images/4人分組討論2.png" width="748"/><img alt="" height="1032" src="./../images/4人分組討論3.5.png" width="1194"/><img alt="" height="800" src="./../images/4人分組討論4.png" width="400"/></p>
-<br />討論 << <a href='討論.html'>Previous</a> <a href='第二次討論.html'>Next</a> >> 第二次討論</div>
+    <div id="tipue_search_content">第二次討論 << <a href='第二次討論.html'>Previous</a> <br /><h1>第三次討論</h1>
+<p>日期4/17</p>
+<p><img alt="" height="1136" src="./../images/第三次討論1.jpg" width="1228"/><img alt="" height="1106" src="./../images/第三次討論2.jpg" width="636"/><img alt="" height="1113" src="./../images/第三次討論3.jpg" width="715"/><img alt="" height="1145" src="./../images/第三次討論4.jpg" width="795"/></p>
+<p></p><br />第二次討論 << <a href='第二次討論.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
