--- a/content/第二次討論.html
+++ b/content/第二次討論.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a><li><a href='第八周.html'>第八周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a><li><a href='第八周.html'>第八周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a><li><a href='第三次討論.html'>第三次討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,10 +134,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第一次討論 << <a href='第一次討論.html'>Previous</a> <br /><h1>第二次討論</h1>
+    <div id="tipue_search_content">第一次討論 << <a href='第一次討論.html'>Previous</a> <a href='第三次討論.html'>Next</a> >> 第三次討論<br /><h1>第二次討論</h1>
 <p>日期4/6</p>
 <p><img alt="" height="1100" src="./../images/第二次4人分組討論.jpg" width="443"/></p>
-<p></p><br />第一次討論 << <a href='第一次討論.html'>Previous</a> </div>
+<br />第一次討論 << <a href='第一次討論.html'>Previous</a> <a href='第三次討論.html'>Next</a> >> 第三次討論</div>
         
     <!-- footer -->
       <div class="container">
