--- a/content/第九周.html
+++ b/content/第九周.html
@@ -2,7 +2,7 @@
         <head>
         <title>stage2-bg6</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,21 +134,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='多功能腳踏車衝擊測試機.html'>Next</a> >> 多功能腳踏車衝擊測試機<br /><h1>About</h1>
-<p>組員:</p>
-<p>40823214、40823225、40823247、40823248</p>
-<p>------------------------------------------------------</p>
-<p>分工:</p>
-<p>40823214繪圖</p>
-<p>40823225網頁管理</p>
-<p>40823247、40823248程式模擬</p>
-<p>------------------------------------------------------</p>
-<p>組員網站及倉儲:</p>
-<p>40823214<a href="https://github.com/40823214/cd2021">倉儲</a>|<a href="https://40823214.github.io/cd2021/content/index.html">網站</a></p>
-<p>40823225<a href="https://github.com/40823225/cd2021">倉儲</a>|<a href="https://40823225.github.io/cd2021/content/index.html">網站</a></p>
-<p>40823247<a href="https://github.com/40823247/cd2021">倉儲</a>|<a href="https://40823247.github.io/cd2021/content/index.html">網站</a></p>
-<p>40823248<a href="https://github.com/40823248/cd2021">倉儲</a>|<a href="https://40823248.github.io/cd2021/content/index.html">網站<br/></a></p>
-<p></p><br /> <a href='多功能腳踏車衝擊測試機.html'>Next</a> >> 多功能腳踏車衝擊測試機</div>
+    <div id="tipue_search_content">第八周 << <a href='第八周.html'>Previous</a> <a href='討論.html'>Next</a> >> 討論<br /><h1>第九周</h1>
+<p>以下是我們從第5周到第九周的總結影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/v4dxNMr_tL0" width="560"></iframe><a href="https://youtu.be/v4dxNMr_tL0">https://youtu.be/v4dxNMr_tL0</a></p>
+<br />第八周 << <a href='第八周.html'>Previous</a> <a href='討論.html'>Next</a> >> 討論</div>
         
     <!-- footer -->
       <div class="container">
