--- a/content/第八周.html
+++ b/content/第八周.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a><li><a href='第八周.html'>第八周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a><li><a href='第三次討論.html'>第三次討論</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='多功能腳踏車衝擊測試機.html'>多功能腳踏車衝擊測試機</a><ul class='dropdown'><li><a href='1.腳踏車架衝擊測試.html'>1.腳踏車架衝擊測試</a><li><a href='2.前叉衝擊測試.html'>2.前叉衝擊測試</a><li><a href='3.踏板衝擊測試.html'>3.踏板衝擊測試</a><li><a href='4.登山車輪組能量吸收測試.html'>4.登山車輪組能量吸收測試</a></li></ul><li class='has-children'><a href='成品.html'>成品</a><ul class='dropdown'><li><a href='治具.html'>治具</a></li></ul><li><a href='市購件廠商(參考廠商).html'>市購件廠商(參考廠商)</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='第六周.html'>第六周</a><li><a href='第七周.html'>第七周</a><li><a href='第八周.html'>第八周</a><li><a href='第九周.html'>第九周</a></li></ul><li class='has-children'><a href='討論.html'>討論</a><ul class='dropdown'><li><a href='第一次討論.html'>第一次討論</a><li><a href='第二次討論.html'>第二次討論</a><li><a href='第三次討論.html'>第三次討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第七周 << <a href='第七周.html'>Previous</a> <a href='討論.html'>Next</a> >> 討論<br /><h1>第八周</h1>
+    <div id="tipue_search_content">第七周 << <a href='第七周.html'>Previous</a> <a href='第九周.html'>Next</a> >> 第九周<br /><h1>第八周</h1>
 <p>程式模擬</p>
 <p>此為程式模擬影片，使用coppeliasim時模擬出現問題，仍在找詳細原因</p>
 <p>目前改用invertor模擬，以下為模擬影片。</p>
@@ -144,7 +144,7 @@ img.add_border {
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dRWGmjvaeOQ" width="560"></iframe></span></p>
 <p><span>3.腳踏車前叉衝擊模擬測試</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZhZ4PM83Bp8" width="560"></iframe></span></p>
-<br />第七周 << <a href='第七周.html'>Previous</a> <a href='討論.html'>Next</a> >> 討論</div>
+<br />第七周 << <a href='第七周.html'>Previous</a> <a href='第九周.html'>Next</a> >> 第九周</div>
         
     <!-- footer -->
       <div class="container">
