--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -11,9 +11,8 @@
 <p>40823214<a href="https://github.com/40823214/cd2021">倉儲</a>|<a href="https://40823214.github.io/cd2021/content/index.html">網站</a></p>
 <p>40823225<a href="https://github.com/40823225/cd2021">倉儲</a>|<a href="https://40823225.github.io/cd2021/content/index.html">網站</a></p>
 <p>40823247<a href="https://github.com/40823247/cd2021">倉儲</a>|<a href="https://40823247.github.io/cd2021/content/index.html">網站</a></p>
-<p>40823248<a href="https://github.com/40823248/cd2021">倉儲</a>|<a href="https://40823248.github.io/cd2021/content/index.html">網站<br/></a><a href="https://40823248.github.io/cd2021/content/index.html">t</a>est</p>
-<p></p>
-<h1>多功能腳踏車衝擊測試機</h1>
+<p>40823248<a href="https://github.com/40823248/cd2021">倉儲</a>|<a href="https://40823248.github.io/cd2021/content/index.html">網站<br/></a></p>
+<p></p><h1>多功能腳踏車衝擊測試機</h1>
 <p></p>
 <h2>1.腳踏車架衝擊測試</h2>
 <p>參考規範</p>
