--- a/content/第九周.html
+++ b/content/第九周.html
@@ -136,7 +136,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">第八周 << <a href='第八周.html'>Previous</a> <a href='討論.html'>Next</a> >> 討論<br /><h1>第九周</h1>
 <p>以下是我們從第5周到第九周的總結影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/v4dxNMr_tL0" width="560"></iframe><a href="https://youtu.be/v4dxNMr_tL0">https://youtu.be/v4dxNMr_tL0</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/v4dxNMr_tL0" width="560"></iframe></p>
+<p><a href="https://youtu.be/v4dxNMr_tL0">https://youtu.be/v4dxNMr_tL0</a></p>
 <br />第八周 << <a href='第八周.html'>Previous</a> <a href='討論.html'>Next</a> >> 討論</div>
         
     <!-- footer -->
