--- a/content/第三次討論.html
+++ b/content/第三次討論.html
@@ -137,7 +137,7 @@ img.add_border {
     <div id="tipue_search_content">第二次討論 << <a href='第二次討論.html'>Previous</a> <br /><h1>第三次討論</h1>
 <p>日期4/17</p>
 <p><img alt="" height="1136" src="./../images/第三次討論1.jpg" width="1228"/><img alt="" height="1106" src="./../images/第三次討論2.jpg" width="636"/><img alt="" height="1113" src="./../images/第三次討論3.jpg" width="715"/><img alt="" height="1145" src="./../images/第三次討論4.jpg" width="795"/></p>
-<p></p><br />第二次討論 << <a href='第二次討論.html'>Previous</a> </div>
+<br/><br/><br/><br/>圖檔<br/><a href="./../downloads/工程圖.dwg">工程圖.dwg</a><br />第二次討論 << <a href='第二次討論.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
