--- a/content/第八周.html
+++ b/content/第八周.html
@@ -135,6 +135,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">第七周 << <a href='第七周.html'>Previous</a> <a href='第九周.html'>Next</a> >> 第九周<br /><h1>第八周</h1>
+<p>第八週小組進度影片</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/byQJqJmzULY" title="YouTube video player" width="560"></iframe></p>
 <p>程式模擬</p>
 <p>此為程式模擬影片，使用coppeliasim時模擬出現問題，仍在找詳細原因</p>
 <p>目前改用invertor模擬，以下為模擬影片。</p>
@@ -143,8 +145,7 @@ img.add_border {
 <p><span>2.腳踏車架衝擊模擬測試</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dRWGmjvaeOQ" width="560"></iframe></span></p>
 <p><span>3.腳踏車前叉衝擊模擬測試</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZhZ4PM83Bp8" width="560"></iframe></span></p>
-<br />第七周 << <a href='第七周.html'>Previous</a> <a href='第九周.html'>Next</a> >> 第九周</div>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZhZ4PM83Bp8" width="560"></iframe></span></p><br />第七周 << <a href='第七周.html'>Previous</a> <a href='第九周.html'>Next</a> >> 第九周</div>
         
     <!-- footer -->
       <div class="container">
