--- a/config/content.htm
+++ b/config/content.htm
@@ -95,6 +95,8 @@
 <h2>第七周</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ysv6bemaso4" width="560"></iframe><a href="https://youtu.be/ysv6bemaso4">https://youtu.be/ysv6bemaso4</a></p>
 <h2>第八周</h2>
+<p>第八週小組進度影片</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/byQJqJmzULY" title="YouTube video player" width="560"></iframe></p>
 <p>程式模擬</p>
 <p>此為程式模擬影片，使用coppeliasim時模擬出現問題，仍在找詳細原因</p>
 <p>目前改用invertor模擬，以下為模擬影片。</p>
@@ -103,8 +105,7 @@
 <p><span>2.腳踏車架衝擊模擬測試</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dRWGmjvaeOQ" width="560"></iframe></span></p>
 <p><span>3.腳踏車前叉衝擊模擬測試</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZhZ4PM83Bp8" width="560"></iframe></span></p>
-<h2>第九周</h2>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZhZ4PM83Bp8" width="560"></iframe></span></p><h2>第九周</h2>
 <p>以下是我們從第5周到第九周的總結影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/v4dxNMr_tL0" width="560"></iframe></p>
 <p><a href="https://youtu.be/v4dxNMr_tL0">https://youtu.be/v4dxNMr_tL0</a></p>
