--- a/reveal/index.html
+++ b/reveal/index.html
@@ -269,6 +269,10 @@
         <iframe data-src="stge2-bg6.pdf" width="800" height="600" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:3px solid #666; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
         </section>
         <section>
+            <p>總結影片</p>
+            <p><iframe width="560" height="315" src="https://www.youtube.com/embed/v4dxNMr_tL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+        </section>
+        <section>
             <h2>心得</h2>
             <p>我們這次由2人變成4人分組，我發現分工與意見的整合也變得更加的重要，有遇到意見分歧導致有點小吵架，我發現這個時候組長的作用就很大，要能夠從中化解分歧，並且要能夠整合意見，盡量讓大家都能夠滿意，從4人分組來看，8人分組會面臨的挑戰將會更加的艱難但這也不為是個不錯的挑戰。</p>
         </section>
