--- a/reveal/index.html
+++ b/reveal/index.html
@@ -218,7 +218,7 @@
             </section>
             <section>
             <h4>汽缸夾持機構</h4>
-            <p利用汽缸來聯動衝擊頭</p>
+            <p利用汽缸來聯動衝擊頭，並且有一近接開關來定位</p>
             <p><image src="汽缸.png" width="500" hight="500"></p>
             </section>
             <section>
